ping_pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: exercises/pingpong
          imagePullPolicy: Always
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - pg_isready -h "postgres-svc" -p "5432"
            initialDelaySeconds: 5
            periodSeconds: 5
