ping_pong/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pingpong-dep
  namespace: exercises
spec:
  replicas: 4
  selector:
    matchLabels:
      app: pingpong
  strategy:
    canary:
      steps:
      - setWeight: 25
      - pause:
          duration: 15s
      - setWeight: 50
      - analysis:
          templates:
          - templateName: pingpong-rate
      - setWeight: 100
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: exercises/pingpong
          imagePullPolicy: Always
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - PGPASSWORD=$POSTGRES_PASSWORD pg_isready -h "postgres-svc" -p "5432" -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            initialDelaySeconds: 5
            periodSeconds: 5
